@@ -39,11 +39,11 @@ import org.restlet.test.connector.FileClientTestCase;
 import org.restlet.test.connector.RestartTestCase;
 import org.restlet.test.connector.RiapTestCase;
 import org.restlet.test.connector.ZipClientTestCase;
+import org.restlet.test.data.AuthenticationInfoTestCase;
 import org.restlet.test.data.ConnegTestCase;
 import org.restlet.test.data.CookieTestCase;
 import org.restlet.test.data.FileReferenceTestCase;
 import org.restlet.test.data.LanguageTestCase;
-import org.restlet.test.data.AuthenticationInfoTestCase;
 import org.restlet.test.data.MediaTypeTestCase;
 import org.restlet.test.data.ProductTokenTestCase;
 import org.restlet.test.data.RangeTestCase;
@@ -67,6 +67,7 @@ import org.restlet.test.resource.ResourceTestSuite;
 import org.restlet.test.routing.FilterTestCase;
 import org.restlet.test.routing.RedirectTestCase;
 import org.restlet.test.routing.RouteListTestCase;
+import org.restlet.test.routing.ValidatorTestCase;
 import org.restlet.test.security.DigestVerifierTestCase;
 import org.restlet.test.security.HttpBasicTestCase;
 import org.restlet.test.security.HttpDigestTestCase;
@@ -118,6 +119,7 @@ public class RestletTestSuite extends TestSuite {
         addTestSuite(StatusTestCase.class);
         addTestSuite(TemplateTestCase.class);
         addTestSuite(TransformerTestCase.class);
+        addTestSuite(ValidatorTestCase.class);
         addTestSuite(VelocityTestCase.class);
         addTestSuite(WadlTestCase.class);
         addTestSuite(ZipClientTestCase.class);
