@@ -56,10 +56,12 @@ public class TraceRestlet extends Restlet {
      */
     @Override
     public void handle(Request request, Response response) {
-        final String message = "Hello World!" + "\nYour IP address is "
+        final String message = "Hello World!"
+                + "\nYour IP address is "
                 + request.getClientInfo().getAddress()
                 + "\nYour request URI is: "
-                + request.getResourceRef().toString();
+                + ((request.getResourceRef() == null) ? "?" : request
+                        .getResourceRef().toString());
         response.setEntity(message, MediaType.TEXT_PLAIN);
     }
 
