@@ -5,13 +5,17 @@ Changes log
 
 - @version-full@ (@release-date@)
     - API changes
+        - Added more specific Validator#validatePresence and 
+          validateFormat methods.
     - Enhancements
     - Bugs fixed
         - Fixed issue in DomRepresentation with createTransformer()
           method. Fix contributed by Remi Dewitte. 
         - Validator#validate() method was protected instead of public.
-          Also added a new validate() methods that only check for 
-          presence or for format. Reported by Ben R. Vesco.
+          Reported by Ben R. Vesco.
+        - Fixed issue in Validator causing an error when a non 
+          required attribute is not found. 
+          Reported by Laurent Rustuel
     - Misc
 
 - 2.0 Milestone 6 (2009-11-20)
